fixed breakpoints and x-scrollbar

--- a/src/styles/desk-lg.scss
+++ b/src/styles/desk-lg.scss
@@ -24,7 +24,5 @@
     
     .header-logo{
         width:  120px;
-        background-color:rgb(17, 182, 69);
-
     }
 }
