--- a/src/styles/desk-xl.scss
+++ b/src/styles/desk-xl.scss
@@ -19,8 +19,6 @@
     }
     .header-logo{
         width:  140px;
-        background-color:blue;
-
     }
     #descHold {
         margin-left: auto;
