--- a/src/styles/tablet-md.scss
+++ b/src/styles/tablet-md.scss
@@ -6,8 +6,8 @@
         color: rgb(255,0,0);
     }
     #holder {
-        /*width: 576px;*/
-        width:100%;
+        width: 768px;
+        //width:100%;
     }
     .navbar-brand {
         display: block;
@@ -18,7 +18,6 @@
     }
     .header-logo{
         width:  100px;
-        background-color:rgb(238, 238, 42);
 
     }
     #descHold {
@@ -27,9 +26,4 @@
         padding-right: 20px;
 
     }
-   /* #descHold {
-        font-size: 1rem;
-        width: 400px;
-
-    }*/
 }
